--- a/views/index.html
+++ b/views/index.html
@@ -1,7 +1,24 @@
-doctype html
-html
-  head
-    title= title
-    link(rel='stylesheet', href='/stylesheets/style.css')
-  body
-    block content
+<!DOCTYPE>
+<html>
+<head><title>FoodBank App</title>
+<link rel="stylesheet" href="foundation/css/foundation.css" />
+<link rel="stylesheet" href="../styles/style.css" />
+
+</head>
+<body>
+<header><div id="logo"><img src="{{LOGO IMAGE}}"</div>
+  <ul><li>Food Bank Alerts</li><li>Settings</li><li>Map</li></ul></header>
+<section>
+<div id="inner">
+  <div id="map">{{MAP}}</div>
+  <div id="radius"></div>
+</div>
+
+
+
+</section>
+
+</body>
+
+
+<html>
