--- a/styles/style.css
+++ b/styles/style.css
@@ -1,16 +1,32 @@
 body{
   background-color: green;
 }
-
-header{
-  height: auto;
-    background-color: blue;
-}
 #logo{
+float:left;
+}
+.menu{
+  float:right;
+}
+header{
+    height: 106px;
+    background-color: #006a54;
+}
+
+img{
 
 }
+
 
 #inner{
-  height: 80%;
-  background-color: cornsilk;
+  /* The image used */
+     background-image: url("../img/pic1.png");
+
+     /* Full height */
+     height: 100%;
+
+     /* Center and scale the image nicely */
+     background-position: center;
+     background-repeat: no-repeat;
+     background-size: cover;
 }
+/*Donor Landing*/
