--- a/styles/style.css
+++ b/styles/style.css
@@ -1,97 +1,92 @@
-
-body{
+body {
   background-image: url("../img/pic1.png");
- text-align: center;
- position:relative;
-
+  text-align: center;
+  position: relative;
   /* Full height */
   height: 100%;
-
   /* Center and scale the image nicely */
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+}
 
+#logo {
+  float: left;
+  padding-left: 34px;
 }
-#logo{
-float:left;
-padding-left: 34px;
-}
-.menu{
-  float:right;
+
+.menu {
+  float: right;
   padding-top: 17px;
   padding-right: 9px;
 }
 
-.menu >li >a{
+.menu>li>a {
   background-color: #d5a10f;
-border-radius: 3px;
-    color: white;
+  border-radius: 3px;
+  color: white;
 }
-header{
+
+header {
   min-height: 13%;
-/* background-color: #006a54; */
-border-bottom: 1px black solid;
-opacity: .8;
+  /* background-color: #006a54; */
+  border-bottom: 1px black solid;
+  opacity: .8;
 }
 
-.menu>li{
-      padding-left: 34px;
-}
-img{
-
+.menu>li {
+  padding-left: 34px;
 }
 
-.menu span {
+img {}
 
+.menu span {}
+
+.row {
+  padding-top: 1%;
+  background-color: rgba(255, 255, 255, 0.31);
+  border-radius: 7px;
+  width: 31em;
 }
 
-.row{
-      padding-top: 1%;
-      background-color: rgba(255, 255, 255, 0.31);
-border-radius: 7px;
-    width: 31em;
-}
-.donor_background{
-
-background-color: white;
-width: 58%;
-height: 45%;
-padding: 20px;
-opacity: 0.6;
-border-radius: 17px;
+.donor_background {
+  background-color: white;
+  width: 58%;
+  height: 45%;
+  padding: 20px;
+  opacity: 0.6;
+  border-radius: 17px;
 }
 
-.donor_text_body{
-width: 100%;
-padding: 20px;
+.donor_text_body {
+  width: 100%;
+  padding: 20px;
 }
 
 .small-5 {
-     width: 100%;
+  width: 100%;
 }
 
-#donor_inner{
-      padding-top: 49px;
+#donor_inner {
+  padding-top: 49px;
 }
 
-.innerbg{}
-section{
+.innerbg {}
+
+section {
   /* The image used */
-
 }
 
-#inner{
+#inner {
   /* The image used */
-     background-image: url("../img/pic1.png");
-
-     /* Full height */
-     height: 100%;
-
-     /* Center and scale the image nicely */
-     background-position: center;
-     background-repeat: no-repeat;
-     background-size: cover;
-
+  background-image: url("../img/pic1.png");
+  /* Full height */
+  height: 100%;
+  /* Center and scale the image nicely */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
-/*Donor Landing*/
+
+
+/*PickUp Detail*/
