--- a/styles/style.css
+++ b/styles/style.css
@@ -116,7 +116,7 @@ section {
 }
 
 .pickup_detail_header{
-background-color: #000000;
+background-color: #006a54;
 }
 
 .info {
@@ -140,7 +140,7 @@ background-color: #000000;
   height: 100%;
   position: absolute;
   width: 100%;
-  background-image: url(../img/pic2.png);
+  background-image: url(../img/pic4.jpg);
   text-align: center;
   background-position: center;
   background-repeat: no-repeat;
@@ -165,5 +165,177 @@ background-color: #000000;
 }
 
 .volunteer_homepage_title{
+
+}
+@media only screen
+and (min-device-width : 320px)
+and (max-device-width : 480px) {
+  body {
+
+  }
+
+  #logo {
+     float: none;
+    padding-left: 0px;
+  }
+
+  .menu {
+     float: none;
+    padding-top: 7px;
+    padding-right: 9px;
+    padding-bottom: 5px;
+  }
+
+  .menu>li>a {
+    background-color: #d5a10f;
+    border-radius: 3px;
+    color: white;
+  }
+
+  header {
+    min-height: 13%;
+    /* background-color: #006a54; */
+    opacity: .8;
+  }
+
+  .menu>li {
+    padding-left: 34px;
+  }
+
+  img {}
+
+  .menu span {}
+
+  .row {
+    padding-top: 1%;
+    background-color: rgba(255, 255, 255, 0.31);
+    border-radius: 7px;
+    width: 31em;
+  }
+
+  .donor_background {
+    background-color: white;
+    width: 58%;
+    height: 45%;
+    padding: 20px;
+    opacity: 0.6;
+    border-radius: 17px;
+  }
+
+  .donor_text_body {
+    width: 100%;
+    padding: 20px;
+  }
+
+  .small-5 {
+    width: 100%;
+  }
+
+  #donor_inner {
+    padding-top: 49px;
+  }
+
+  .innerbg {}
+
+  section {
+    /* The image used */
+  }
+
+  #inner {
+    /* The image used */
+    background-image: url("../img/pic1.png");
+    /* Full height */
+    height: 100%;
+    /* Center and scale the image nicely */
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+  /*Donor UI*/
+  #overlay{
+    background-image: url("../img/pic1.png");
+    text-align: center;
+    position: relative;
+    /* Full height */
+    height: 100%;
+    /* Center and scale the image nicely */
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+
+
+
+  /*PickUp Detail*/
+
+  #pickup_details_overlay{
+    height: 100%;
+        position: absolute;
+        width: 100%;
+        background-image: url(../img/pic2.png);
+        text-align: center;
+        /* position: relative; */
+        /* height: 100%; */
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+  }
+
+  #pickup_detail_inner {}
+
+  #pickup_detail_body {
+    padding-bottom: 44px;
+  }
+
+  .pickup_detail_header{
+  background-color: #006a54;
+  }
+
+  .info {
+    width: 45%;
+    float: right;
+  }
+  .map_side{
+        padding-top: 75px;
+            padding-left: 2%;
+  }
+  #map {
+    float: left;
+    height: 52%;
+  width: 93%;
+    margin: 0 auto;
+  }
+  /*Volunteer Homepage*/
+
+
+  #volunteer_homepage_overlay{
+    height: 100%;
+    position: absolute;
+    width: 100%;
+    background-image: url(../img/pic4.jpg);
+    text-align: center;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+
+  #volunteer_homepage_inner {}
+
+  #volunteer_homepage_body {
+    padding-bottom: 44px;
+  }
+
+  .volunteer_homepage_header{
+      background-color: #006a54;
+  }
+
+  .info {
+    width: 45%;
+    float: right;
+  }
+  #volunteer_homepage_map{
+  }
+
+  .volunteer_homepage_title{padding-top: 62px;}
 
 }
