--- a/views/foodbankmain.html
+++ b/views/foodbankmain.html
@@ -1,113 +1,71 @@
-<!DOCTYPE html>
+<!DOCTYPE>
 <html>
-
 	<head>
 		<title>Food Bank of Delaware: Volunteers</title>
 		<link rel="stylesheet" href="../foundation/css/foundation.css" />
     <link rel="stylesheet" href="../styles/style.css" />
+		<script src="../foundation/js/app.js"></script>
+		<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 	</head>
 
-  <header>  
-    <div class="menu">
-      <ul class="menu">
-        <li><a href="#">Food Bank</a></li>
-        <li><a href="#">Map</a></li>
-        <li><a href="#">Account</a></li>
-      </ul>
-    </div>
-  </header>
+<body>
+<div id="foodbank_main_overlay">
+	<header class="food_bank_main_header">
 
-	<body>
+		<div id="logo" /><a href="http://www.fbd.org/">	</a>
+		<img style="height: 71px;" src="../img/logo.png" />
+	</div>
+	<div class="menu">
+	<ul class="menu">
+		<li><a href="./foodbankmain.html">Food Bank</a></li>
+		<li><a href="./volunteer_homepage.html">Map</a></li>
+		<li><a href="./volunteer_signup.html">Account</a></li>
+	</ul>
+	</div>
+	</header>
+
+
 		<div id="Page">
 
-	<div id="Title" style="text-align: left">
-			<a href="http://www.fbd.org/">		<img src="http://cdn.volunteerhub.com/uploads/0987cea8-969a-402a-b84e-6a38a3778f25/Logo_640_yszip1f1.png" />
-</a>
-	</div>
 
-<div class="login-box">
+
+<!-- <div class="login-box">
   <div class="row collapse expanded">
-    <div class="small-12 medium-6 column small-order-2 medium-order-1">
+    <div class="small-12 medium-6 column small-order-2 medium-order-1 signup">
       <div class="login-box-form-section">
         <h1 class="login-box-title">Sign up</h1>
         <input class="login-box-input" type="text" name="username" placeholder="Username" />
         <input class="login-box-input" type="email" name="email" placeholder="E-mail" />
         <input class="login-box-input" type="password" name="password" placeholder="Password" />
         <input class="login-box-input" type="password" name="password2" placeholder="Retype password" />
-        <input class="login-box-submit-button" type="submit" name="signup_submit" value="Sign me up" />
+        <input class="login-box-submit-button button" type="button" name="signup_submit" value="Sign up" />
       </div>
-      <div class="or">OR</div>
+
     </div>
     <div class="small-12 medium-6 column small-order-1 medium-order-2 login-box-social-section">
-      <div class="login-box-social-section-inner">
-        <span class="login-box-social-headline">Sign in with<br />your social network</span>
-        <a class="login-box-social-button-facebook">Log in with facebook</a>
-        <a class="login-box-social-button-twitter">Log in with Twitter</a>
-        <a class="login-box-social-button-google">Log in with Google+</a>
-      </div>
     </div>
   </div>
-</div>
-
-
-
-	<div id="MainBarMenu" class="menu"><ul>
-			<li class="selected">
-				<a href="/events/indexv1">Events</a>
-			</li>
-	</ul></div>
-
-		<div class="P">
-			<strong>Returning user?</strong>
-			<a href="/account/signin">Sign in</a> to review or cancel your registered events.
-		</div>
-					
-<table class="ExtraPadding FullWidth autocolor WideEventList" id="scrolledIntoView-content">
-	<tr class=SubHeader>
-		<td colspan=3>
-			<a id="20170605"></a>
-			Upcoming Events
-		</td>
-	</tr>
-
-<table>
-
-<div class="row">
-  <div class="large-4 columns">
-  <div class="card blue-grey darken-1">
-            <div class="card-content white-text">
-              <span class="card-title"><h3>Newark Kitchen Volunteer (morning)</h3></span>
+</div> -->
+			<h1>Upcoming Events</h1>
+<div class="foodbankmain_row row">
+  <div class="small-12 large-4 columns">
+            <span class="card"><a href="http://fbd.volunteerhub.com/Events/Event/Summary.aspx?EventID=4577586"><h3>Newark Kitchen Volunteer (morning)</h3></a></span>
               <i>Monday, June 5, 6:30am - 9:30am</i>
               <p>Volunteers will help make and pack meals for our Children’s Afterschool Feeding Program.  No culinary experience required; training is provided.</p>
             </div>
-            <div class="card-action">
-              <a href="http://fbd.volunteerhub.com/Events/Event/Summary.aspx?EventID=4577586">This is a link</a>
-            </div>
-           </div>
-          </div>
-  <div class="large-4 columns">
-  	<div class="card blue-grey darken-1">
-            <div class="card-content white-text">
-              <span class="card-title"><h3>Milford Morning Volunteer Room</h3></span>
+  <div class="small-12 large-4 columns">
+              <span class="card">  <a href="http://fbd.volunteerhub.com/Events/Event/Summary.aspx?EventID=3649018"><h3>Milford Morning Volunteer Room</h3></a></span>
               <i>Monday, June 5, 9 am - 12 pm</i>
               <p>Lorem ipsum et cetera.</p>
-            </div>
-            <div class="card-action">
-              <a href="http://fbd.volunteerhub.com/Events/Event/Summary.aspx?EventID=3649018">This is a link</a>
-            </div>
-           </div>
           </div>
-  <div class="large-4 columns">
-  	<div class="card blue-grey darken-1">
-            <div class="card-content white-text">
-              <span class="card-title"><h3>Milford Afternoon Volunteer Room Strike Out Hunger</h3></span>
+  <div class="small-12 large-4 columns">
+
+  <span class="card"> <a href="http://fbd.volunteerhub.com/Events/Event/Summary.aspx?EventID=4441155"><h3>Milford Afternoon Volunteer Room Strike Out Hunger</h3></a></span>
               <i>Monday, June 5, 1 pm - 4 pm</i>
               <p>If you are a parent who would like to bring their child, please email VolunteerInMilford@FBD.org to add them to your event sign up.</p>
-            </div>
-            <div class="card-action">
-              <a href="http://fbd.volunteerhub.com/Events/Event/Summary.aspx?EventID=4441155">This is a link</a>
-            </div>
-          </div>
          </div>
   </div>
-</table>
+
+</div>
+</body>
+</html>
