--- a/views/pickup_detail.html
+++ b/views/pickup_detail.html
@@ -6,6 +6,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="../foundation/css/foundation.css" />
     <link rel="stylesheet" href="../styles/style.css" />
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 
   </head>
 <body id="pickup_detail_body">
@@ -18,9 +19,9 @@
   </div>
   <div class="menu">
     <ul class="menu">
-    <li><a href="#">Food Bank</a></li>
-    <li><a href="#">Map</a></li>
-    <li><a href="#">Account</a></li>
+      <li><a href="./foodbankmain.html">Food Bank</a></li>
+  		<li><a href="./volunteer_homepage.html">Map</a></li>
+  		<li><a href="./volunteer_signup.html">Account</a></li>
   </ul>
   </div>
 
