--- a/views/volunteer_homepage.html
+++ b/views/volunteer_homepage.html
@@ -5,6 +5,7 @@
   <title>Food Bank</title>
   <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
   <meta charset="utf-8">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
   <style>
     /* Always set the map height explicitly to define the size of the div
        * element that contains the map. */
@@ -35,9 +36,9 @@
   </div>
   <div class="menu">
     <ul class="menu">
-      <li><a href="#">Food Bank</a></li>
-      <li><a href="#">Map</a></li>
-      <li><a href="#">Account</a></li>
+      <li><a href="./foodbankmain.html">Food Bank</a></li>
+  		<li><a href="./volunteer_homepage.html">Map</a></li>
+  		<li><a href="./volunteer_signup.html">Account</a></li>
     </ul>
   </div>
 
