--- a/views/donor_landing.html
+++ b/views/donor_landing.html
@@ -4,6 +4,7 @@
 <head><title>FoodBank App</title>
 <link rel="stylesheet" href="../foundation/css/foundation.css" />
 <link rel="stylesheet" href="../styles/style.css" />
+<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 </head>
 
 <body>
@@ -15,9 +16,9 @@
 </div>
 <div class="menu">
   <ul class="menu">
-  <li><a href="#">Food Bank</a></li>
-  <li><a href="#">Map</a></li>
-  <li><a href="#">Account</a></li>
+    <li><a href="./foodbankmain.html">Food Bank</a></li>
+    <li><a href="./volunteer_homepage.html">Map</a></li>
+    <li><a href="./volunteer_signup.html">Account</a></li>
 </ul>
 </div>
 
