--- a/views/foodbankmain.html
+++ b/views/foodbankmain.html
@@ -24,6 +24,8 @@
 
 	<link rel="stylesheet" href="../foundation/css/foundation.css" />
 	<link rel="stylesheet" href="../styles/style.css" />
+    <script src="../foundation/js/vendor/foundation.js"></script>
+		  <script src="../foundation/js/vendor/jquery.js"></script>
 </head>
 
 <body id="volunteer_homepage_body">
@@ -46,7 +48,10 @@
 
 			<h1 class="header_center">UPCOMING EVENTS</h1>
 <div class="foodbankmain_row row">
-	<table>
+
+
+
+	<table class="">
 	  <thead>
 	    <tr>
 	      <th width="250"><span class="card">
@@ -82,5 +87,7 @@
 
 
 </div>
+
+
 </body>
 </html>
