--- a/views/volunteer_homepage.html
+++ b/views/volunteer_homepage.html
@@ -47,7 +47,9 @@
   <p> These are the locations that need volunteers for pickup. Click a pin to see the status of the donation.
 </p>
 </div>
-  <div style="float:none;" id="map"></div>
+
+<a href="./pickup_detail.html">
+  <div style="float:none;" id="map"></div></a>
 
   <script>
     // Note: This example requires that you consent to location sharing when
