--- a/views/volunteer_signup.html
+++ b/views/volunteer_signup.html
@@ -59,6 +59,8 @@
 
 
 				</h2>
+
+				<div class="volunteer_signup">
         <input class="login-box-input signup_form" type="text" name="username" placeholder="Username" />
 <br>
 			  <input class="login-box-input signup_form" type="email" name="email" placeholder="E-mail" />
@@ -67,8 +69,19 @@
 <br>
 			  <!-- <input class="login-box-input signup_form" type="password" name="password2" placeholder="Retype password" /> -->
 <br>
-			  <input class="login-box-submit-button button " type="button" name="signup_submit" value="Sign up" />
-      </div>
+</div>
+
+<!-- <div class="donor">
+<input class="login-box-input signup_form" type="text" name="organization" placeholder="Organization" />
+<br> -->
+
+<!-- <input class="login-box-input signup_form" type="password" name="password2" placeholder="Retype password" /> -->
+<br>
+</div>
+
+
+			  <a href="./volunteer_homepage.html" ><input class="login-box-submit-button button " type="button" name="signup_submit" value="Sign up" />
+      </a></div>
 
     </div>
 </div>
