--- a/views/pickup_detail.html
+++ b/views/pickup_detail.html
@@ -97,7 +97,7 @@
           </div></div>
 
           <div class="large-7 small-centered columns"><div id="pickup_btn">
-            <button type="button" class=" button">Accept</button>
+            <a href=""><button type="button" class=" button">Accept</button></a>
           </div>
           </div></div>
         </div>
