--- a/views/donor_landing.html
+++ b/views/donor_landing.html
@@ -49,7 +49,7 @@
       </h3></div>
 
           <div class="medium-7 small-centered columns"><div id="perishable"><h3>
-            Perishable: <select id=isPerishabel>
+            Perishable: <select style="width:65px" id=isPerishable>
               <option>YES</option>
               <option>NO</option>
               </option>
