--- a/views/donor_landing.html
+++ b/views/donor_landing.html
@@ -49,10 +49,9 @@
       </h3></div>
 
           <div class="medium-7 small-centered columns"><div id="perishable"><h3>
-            Perishable: <select id=isPerishabel>
+            Perishable: <select style="width: 65px">
               <option>YES</option>
               <option>NO</option>
-              </option>
             </select></h3>
           </div></div>
 
