--- a/views/volunteer_homepage.html
+++ b/views/volunteer_homepage.html
@@ -52,10 +52,21 @@
   <div style="float:none;" id="map"></div>
 
   <script>
-    // Note: This example requires that you consent to location sharing when
-    // prompted by your browser. If you see the error "The Geolocation service
-    // failed.", it means you probably did not give permission for the browser to
-    // locate you.
+  function getQueryVariable(variable)
+{
+       var query = window.location.search.substring(1);
+       var vars = query.split("&");
+       for (var i=0;i<vars.length;i++) {
+               var pair = vars[i].split("=");
+               if(pair[0] == variable){return pair[1];}
+       }
+       return(false);
+}
+    let latOne = getQueryVariable("lat");
+    let longOne = getQueryVariable("long");
+    console.log(latOne);
+    console.log(longOne);
+
     var map, infoWindow;
 
     function initMap() {
@@ -64,7 +75,7 @@
           lat: -34.397,
           lng: 150.644
         },
-        zoom: 14
+        zoom: 12
       });
       infoWindow = new google.maps.InfoWindow;
 
@@ -81,8 +92,10 @@
           infoWindow.open(map);
           map.setCenter(pos);
           var pos2 = {
-            lat: position.coords.latitude + .005,
-            lng: position.coords.longitude + .002
+            lat: parseFloat(latOne),
+            lng: parseFloat(longOne)
+
+
           };
 
           var pos3 = {
@@ -93,12 +106,10 @@
           var marker = new google.maps.Marker({
             position: pos2,
             map: map,
-            title: 'Hello World!'
           });
           var marker = new google.maps.Marker({
             position: pos3,
             map: map,
-            title: 'Hello World!'
           });
         }, function() {
           handleLocationError(true, infoWindow, map.getCenter());
