--- a/views/volunteer_homepage.html
+++ b/views/volunteer_homepage.html
@@ -1,175 +1,122 @@
+Anthony Jones [2:26 PM]
+added this Plain Text snippet
 <!DOCTYPE>
 <html>
-
 <head>
-  <title>Food Bank</title>
-  <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
-  <meta charset="utf-8">
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-  <style>
-    /* Always set the map height explicitly to define the size of the div
-       * element that contains the map. */
-
-    #map {
-      height: 100%;
-    }
-    /* Optional: Makes the sample page fill the window. */
-
-    html,
-    body {
-      height: 75%;
-      margin: 0;
-      padding: 0;
-    }
-  </style>
-
-  <link rel="stylesheet" href="../foundation/css/foundation.css" />
-  <link rel="stylesheet" href="../styles/style.css" />
+ <title>Food Bank</title>
+ <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
+ <meta charset="utf-8">
+ <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+ <style>
+  /* Always set the map height explicitly to define the size of the div
+    * element that contains the map. */
+  #map {
+   height: 100%;
+  }
+  /* Optional: Makes the sample page fill the window. */
+  html,
+  body {
+   height: 75%;
+   margin: 0;
+   padding: 0;
+  }
+ </style>
+ <link rel="stylesheet" href="../foundation/css/foundation.css" />
+ <link rel="stylesheet" href="../styles/style.css" />
 </head>
-
 <body id="volunteer_homepage_body">
-  <div id="volunteer_homepage_overlay">
-    <header class="volunteer_homepage_header">
-      <div id="logo" />
-      <img style="height: 71px;" src="../img/logo.png" />
-  </div>
-  <div class="menu">
-    <ul class="menu">
-      <li><a href="./foodbankmain.html">Food Bank</a></li>
-  		<li><a href="./volunteer_homepage.html">Map</a></li>
-  		<li><a href="./volunteer_signup.html">Account</a></li>
-    </ul>
-  </div>
-  </header>
-
+ <div id="volunteer_homepage_overlay">
+  <header class="volunteer_homepage_header">
+   <div id="logo" />
+   <img style="height: 71px;" src="../img/logo.png" />
+ </div>
+ <div class="menu">
+  <ul class="menu">
+   <li><a href="./foodbankmain.html">Food Bank</a></li>
+    <li><a href="./volunteer_homepage.html">Map</a></li>
+    <li><a href="./volunteer_signup.html">Account</a></li>
+  </ul>
+ </div>
+ </header>
 <div class="volunteer_homepage_title">
-  <h1>Donation Map</h1>
-  <p> These are the locations that need volunteers for pickup. Click a pin to see the status of the donation.
+ <h1>Donation Map</h1>
+ <p> These are the locations that need volunteers for pickup. Click a pin to see the status of the donation.
 </p>
 </div>
-
-<<<<<<< HEAD
-<<<<<<< HEAD
-  <script>
-  function getQueryVariable(variable)
-{
-       var query = window.location.search.substring(1);
-       var vars = query.split("&");
-       for (var i=0;i<vars.length;i++) {
-               var pair = vars[i].split("=");
-               if(pair[0] == variable){return pair[1];}
-       }
-       return(false);
-}
-    let latOne = getQueryVariable("lat");
-    let longOne = getQueryVariable("long");
-    console.log(latOne);
-    console.log(longOne);
-
-    var map, infoWindow;
-=======
 <a href="./pickup_detail.html">
-  <div style="float:none;" id="map"></div></a>
->>>>>>> 7e954608bab566605493bd85d3e6b227829ef133
-=======
- var map, infoWindow;
-
-<a href="./pickup_detail.html">
-  <div style="float:none;" id="map"></div></a>
-
->>>>>>> f3b84ae221640c6c2b3982bc2e7994fbde5c05a3
-
-  <script>
-  function getQueryVariable(variable)
+ <div style="float:none;" id="map"></div></a>
+ <script>
+ function getQueryVariable(variable)
 {
-       var query = window.location.search.substring(1);
-       var vars = query.split("&");
-       for (var i=0;i<vars.length;i++) {
-               var pair = vars[i].split("=");
-               if(pair[0] == variable){return pair[1];}
-       }
-       return(false);
+    var query = window.location.search.substring(1);
+    var vars = query.split("&");
+    for (var i=0;i<vars.length;i++) {
+        var pair = vars[i].split("=");
+        if(pair[0] == variable){return pair[1];}
+    }
+    return(false);
 }
-    let latOne = getQueryVariable("lat");
-    let longOne = getQueryVariable("long");
-    console.log(latOne);
-    console.log(longOne);
-
-   var map, infoWindow;
-
-   function initMap() {
-      map = new google.maps.Map(document.getElementById('map'), {
-        center: {
-          lat: -34.397,
-          lng: 150.644
-        },
-        zoom: 12
-      });
-      infoWindow = new google.maps.InfoWindow;
-
-     // Try HTML5 geolocation.
-      if (navigator.geolocation) {
-        navigator.geolocation.getCurrentPosition(function(position) {
-          var pos = {
-            lat: position.coords.latitude,
-            lng: position.coords.longitude
-          };
-
-         infoWindow.setPosition(pos);
-          infoWindow.setContent('You are here!');
-          infoWindow.open(map);
-          map.setCenter(pos);
-          var pos2 = {
-            lat: parseFloat(latOne),
-            lng: parseFloat(longOne)
-
-<<<<<<< HEAD
-<<<<<<< HEAD
-
-          };
-=======
->>>>>>> 7e954608bab566605493bd85d3e6b227829ef133
-
-=======
->>>>>>> f3b84ae221640c6c2b3982bc2e7994fbde5c05a3
-         };
-
-         var pos3 = {
-            lat: position.coords.latitude + .008,
-            lng: position.coords.longitude + .01
-          };
-
-         var marker = new google.maps.Marker({
-            position: pos2,
-            map: map,
-          });
-          var marker = new google.maps.Marker({
-            position: pos3,
-            map: map,
-          });
-        }, function() {
-          handleLocationError(true, infoWindow, map.getCenter());
-        });
-      } else {
-        // Browser doesn't support Geolocation
-        handleLocationError(false, infoWindow, map.getCenter());
-      }
-    }
-
-   function handleLocationError(browserHasGeolocation, infoWindow, pos) {
-      infoWindow.setPosition(pos);
-      infoWindow.setContent(browserHasGeolocation ?
-        'Error: The Geolocation service failed.' :
-        'Error: Your browser doesn\'t support geolocation.');
-      infoWindow.open(map);
-    }
-  </script>
-  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBfzMencPryiSpJtr0HajbKcgCd88yO3vc&callback=initMap">
-  </script>
-
-  <div>
-  </div>
-
-  </div>
+  let latOne = getQueryVariable("lat");
+  let longOne = getQueryVariable("long");
+  console.log(latOne);
+  console.log(longOne);
+  var map, infoWindow;
+  function initMap() {
+   map = new google.maps.Map(document.getElementById('map'), {
+    center: {
+     lat: -34.397,
+     lng: 150.644
+    },
+    zoom: 12
+   });
+   infoWindow = new google.maps.InfoWindow;
+   // Try HTML5 geolocation.
+   if (navigator.geolocation) {
+    navigator.geolocation.getCurrentPosition(function(position) {
+     var pos = {
+      lat: position.coords.latitude,
+      lng: position.coords.longitude
+     };
+     infoWindow.setPosition(pos);
+     infoWindow.setContent('You are here!');
+     infoWindow.open(map);
+     map.setCenter(pos);
+     var pos2 = {
+      lat: parseFloat(latOne),
+      lng: parseFloat(longOne)
+     };
+     var pos3 = {
+      lat: position.coords.latitude + .008,
+      lng: position.coords.longitude + .01
+     };
+     var marker = new google.maps.Marker({
+      position: pos2,
+      map: map,
+     });
+     var marker = new google.maps.Marker({
+      position: pos3,
+      map: map,
+     });
+    }, function() {
+     handleLocationError(true, infoWindow, map.getCenter());
+    });
+   } else {
+    // Browser doesn't support Geolocation
+    handleLocationError(false, infoWindow, map.getCenter());
+   }
+  }
+  function handleLocationError(browserHasGeolocation, infoWindow, pos) {
+   infoWindow.setPosition(pos);
+   infoWindow.setContent(browserHasGeolocation ?
+    'Error: The Geolocation service failed.' :
+    'Error: Your browser doesn\'t support geolocation.');
+   infoWindow.open(map);
+  }
+ </script>
+ <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBfzMencPryiSpJtr0HajbKcgCd88yO3vc&callback=initMap">
+ </script>
+ <div>
+ </div>
+ </div>
 </body>
 <html>
